# rusty_scheme

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  THIRD-PARTY.txt  TODO.txt  reproduce-bug.bat  reproduce-bug.sh
lib/: Makefile  additions.scm  assembler.scm  assert.scm  bytecode.scm  bytecode.ss  compile.sh  environment.scm  environment.ss  main.scm  main.ss  system.lsp  test.scm  test1.scm  test2.scm  tree-walk.scm  tree-walk.ss
src/: .interp.rs.swp  .value.rs.swp  Makefile  alloc.rs  api.rs  api.rs.bk  arith.rs  arith.rs.bk  assembler.rs  ast_interp.rs  bytecode.rs  bytecode.rs.bk  closure.rs  gc.c  gc.rs  interp.c  interp.rs  interp.rs.bk  lib.rs  lib.rs.bk  macros.scm  print.rs  read.rs  state.rs  string.rs  symbol.rs  symbol.rs.bk  test  test.h  value.rs  value.rs.bk
src/alloc/: debug.rs  mod.rs  rust_data.rs
src/api/: handle.rs  mod.rs  pool.rs
src/compiler/: mod.rs
